# CIRISBilling

./: .dockerignore  .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  ADMIN_UI.md  ADMIN_UI_DEPLOYMENT.md  AGENT_GUIDE.md  API_KEY_QUICKSTART.md  CODE_QUALITY_REPORT.md  DEPLOYMENT.md  Dockerfile  GOOGLE_PLAY_SUMMARY.md  INTEGRATION.md  LOCAL_TESTING.md  MISSION_ALIGNMENT.md  Makefile  OAUTH_IMPLEMENTATION_STATUS.md  OBSERVABILITY.md  OBSERVABILITY_QUERIES.md  OBSERVABILITY_QUICKSTART.md  README.md  SECURITY_IMPLEMENTATION_PLAN.md  STRIPE_INTEGRATION.md  UI_REQUIREMENTS.txt  alembic.ini  claude.md  docker-compose.admin.yml  docker-compose.local.yml  docker-compose.observability.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup-server.sh  sonar-project.properties  start.sh  test-local.sh
.github/workflows/: ci.yml  deploy.yml  docker-publish.yml  sonarcloud.yml
alembic/: env.py
alembic/versions/: 2025_10_08_0000-initial_schema.py  2025_10_08_0001-add_usage_tracking.py  2025_10_08_0002-add_admin_system.py  2025_10_08_0003-update_admin_users_oauth.py  2025_10_08_0004-add_marketing_consent.py  2025_10_09_0005-add_user_metadata.py  2025_10_15_0006-add_customer_email.py  2025_10_16_0007-remove_charge_balance_constraint.py  2025_10_21_0008-add_paid_credits_field.py  2025_11_25_0009-add_google_play_support.py  2025_11_25_0010-add_llm_usage_logs.py  2025_11_29_0011-add_daily_free_uses.py  2025_12_01_0012-add_display_name.py  2025_12_04_0013-add_credits_is_test.py  2025_12_05_0014-add_revoked_tokens.py  2025_12_14_0015-add_product_inventory.py  2025_12_17_0016-fix_account_unique_constraint.py  2026_01_29_0017-add_apple_storekit_support.py
app/: config.py  exceptions.py  logshipper.py  main.py
app/api/: admin_auth_routes.py  admin_dependencies.py  admin_routes.py  dependencies.py  routes.py  status_routes.py  tool_routes.py
app/db/: migration_runner.py  models.py  session.py
app/models/: api.py  apple_storekit.py  domain.py  google_play.py  play_integrity.py
app/observability/: __init__.py  logging.py  metrics.py  tracing.py
app/services/: admin_auth.py  api_key.py  apple_storekit_products.py  apple_storekit_provider.py  billing.py  google_oauth.py  google_play_products.py  google_play_provider.py  payment_provider.py  play_integrity.py  product_inventory.py  provider_config.py  stripe_provider.py  token_revocation.py
docker/grafana/: dashboards.yaml  datasources.yaml
docker/nginx/: admin-nginx-http-only.conf  admin-nginx.conf  nginx.conf
docker/otel/: otel-collector-config.yaml
docker/postgres/: init.sql
docker/postgres/primary/: init.sh  postgresql.conf
docker/postgres/replica/: setup-replica.sh
docker/prometheus/: prometheus.local.yml  prometheus.yml
docs/: BILLING_ARCHIVE_FSD.md  CREDIT_CHECK_USAGE.md  STRIPE_PURCHASE_TESTING.md  storekit_integration.md
infrastructure/: apply-lifecycle.sh  billing-archive-iam.yaml  billing-archive-s3-lifecycle.yaml  billing-archive.cron  lifecycle-policy.json
scripts/: archive-billing.py  qa-auto-replenish.service  qa_auto_replenish.py  setup-archive.sh  setup-secrets.sh  verify-secrets.sh
static/admin/: admin.js  dashboard.html  dashboard.js  index.html  login.html
tests/: conftest.py  test_admin_auth.py  test_admin_routes.py  test_api_key_service.py  test_billing_service.py  test_daily_free_uses.py  test_dependencies.py  test_display_name.py  test_domain_models.py  test_exceptions.py  test_google_play_api_models.py  test_google_play_migration.py  test_google_play_models.py  test_google_play_products.py  test_google_play_routes.py  test_hypothesis_billing.py  test_hypothesis_models.py  test_litellm_routes.py  test_main.py  test_margin_analytics.py  test_product_inventory.py  test_routes.py  test_status_routes.py  test_token_revocation.py  test_tool_routes.py
tests/e2e/: run-tests.sh  test_api_endpoints.py
tools/analysis/: sonar.py
(+1 files in other folders)
