[project]
name = "ciris-billing"
version = "0.1.0"
description = "CIRIS Billing API - Credit gating service for CIRIS Agent"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.32.0",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "sqlalchemy[asyncio]==2.0.35",
    "alembic==1.13.3",
    "asyncpg==0.29.0",
    "psycopg2-binary==2.9.10",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=app",
    "--cov-report=term-missing",
    "-m", "not live and not integration",
]
markers = [
    "live: marks tests as requiring live infrastructure (deselect with '-m \"not live\"')",
    "integration: marks tests as integration tests requiring database (deselect with '-m \"not integration\"')",
]

[tool.black]
line-length = 100
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "B008",  # Do not perform function call in argument defaults (FastAPI Depends pattern)
    "E501",  # Line too long (handled by formatter, allow longer lines for readability)
    "B904",  # Within except clause, raise with `from` (common logging pattern)
    "UP038", # Use X | Y in isinstance (tuple is more readable)
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "app.logshipper"
ignore_errors = true

[[tool.mypy.overrides]]
module = "scripts.*"
ignore_errors = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
